objects/AsiaProfitCalculationDetail__c.object
<CustomObject>
    <fields>
        <fullName>AccompanyingPaperOutput__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accompanying Paper Output</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CatalogCurrency__c</fullName>
        <label>Catalog Currency</label>
        <picklist>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SGD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JPY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GBP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CertificationExpress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Certification Express</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CommissionCostPct__c</fullName>
        <label>CommissionCostPct</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CommissionTarget__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Commission Target</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CostPriceJPY2SP__c</fullName>
        <label>2SP Cost Price (JPY)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CostPriceJProdUnit2SP__c</fullName>
        <label>2SP Cost Price (JProd unit)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CostPriceJProdUnit__c</fullName>
        <label>Cost Price (JProd unit)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CostPriceSalesCur2SP__c</fullName>
        <label>2SP Cost Price (Sales Currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CostPriceUnit__c</fullName>
        <label>Cost Price Unit</label>
        <picklist>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SGD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JPY</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CostPrice__c</fullName>
        <label>Cost Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Depth__c</fullName>
        <label>Depth</label>
        <precision>1</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DiscountAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IdTechnical__c</fullName>
        <description>Technical fields.
Used to link 2 SP rows and Items rows when copying a QT.</description>
        <label>IdTechnical</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsDiscountTarget__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Discount Target</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsDisplayDecimal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Gets its value from UserSetting__c&apos;s IsDisplayDecimal__c field.</description>
        <label>IsDisplayDecimal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsForbiddenTarget__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the current item is forbidden (Export banned, ...).
Normally, it should always be false since we forbid the save if such item exists, but this field is used to show which item is forbidden.</description>
        <label>Is Forbidden Target</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsJProdTarget__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is JProd</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsOverheadTarget__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Overhead Target</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsShowDetailAmount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Show Detail Amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsTaxationTarget__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Taxation Target</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ModelType__c</fullName>
        <label>Model Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentDetail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Profit Calculation Detail</label>
        <referenceTo>AsiaProfitCalculationDetail__c</referenceTo>
        <relationshipName>ProfitCalculationDetail_ParentDetail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <label>Profit Calculation</label>
        <referenceTo>AsiaProfitCalculation__c</referenceTo>
        <relationshipName>ProfitCalculation_ProfitCalculatioDetail</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ProductCode__c</fullName>
        <label>Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProfitCalcNo_BranchNo_SEQ_Sync__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>ProfitCalcNo_BranchNo_SEQ_Sync</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QuantityUnit__c</fullName>
        <label>Quantity Unit</label>
        <picklist>
            <picklistValues>
                <fullName>PC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TIME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PACK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EACH</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>10</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RowCount2SP__c</fullName>
        <label>2SP Row Count</label>
        <summaryFilterItems>
            <field>AsiaProfitCalculationDetail2SP__c.IsSelected__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>AsiaProfitCalculationDetail2SP__c.ProfitCalculationDetail__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SalesPriceCalculated__c</fullName>
        <label>Sales Price Calculated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesPriceCoefficient__c</fullName>
        <label>Sales Price Coefficient</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesPriceFormula__c</fullName>
        <formula>/*IF(ISNULL(SalesPrice__c), SalesPriceCalculated__c, SalesPrice__c)*/
IF(ISNULL(SalesPrice__c), SalesPriceCalculated__c, SalesPrice__c)+ IF(ISNULL(SalesPriceSalesCur2SP__c), 0, SalesPriceSalesCur2SP__c)</formula>
        <label>Sales Price Formula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesPriceSalesCur2SP__c</fullName>
        <label>2SP Cost Price (Sales Currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesPrice__c</fullName>
        <label>Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesUnitPrice__c</fullName>
        <formula>SalesPriceFormula__c / Quantity__c</formula>
        <label>Sales Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SortNo__c</fullName>
        <label>Sort No</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <label>Supplier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>1.明細
2.見出し
3.諸経費
4.小計</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UnitPrice__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Quotation Detail</label>
    <nameField>
        <label>Asia_ProfitCalculationDetail Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>